add all project

--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,6 @@
                 <button
                   class="subscription__arrow-button"
                   type="submit"
-                  onclick="document.getElementById('form').reset();"
                 ></button>
               </form>
             </div>
@@ -296,7 +295,7 @@
             <div class="footer__icons">
               <a
                 class="footer__icons-link"
-                href="#facebook"
+                href="https://uk-ua.facebook.com/"
                 target="_blank"
               >
                 <img src="./images/icons/facebook.svg" alt="facebook">
@@ -304,7 +303,7 @@
 
               <a
                 class="footer__icons-link"
-                href="#instagram"
+                href="https://www.instagram.com/"
                 target="_blank"
               >
                 <img src="./images/icons/instagram.svg" alt="instagram">
@@ -343,7 +342,6 @@
                   <a
                     class="footer__phone-link"
                     href="tel:+38 (044) 278-13-57"
-                    target="_blank"
                   >+38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
                 </div>
 
@@ -351,7 +349,6 @@
                   <a
                     class="footer__email-link"
                     href="email: info@namu.kiev.ua"
-                    target="_blank"
                   > e-mail: info@namu.kiev.ua</a>
                 </div>
               </div>
