--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,257 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header">
+      <div class="container">
+        <div class="header__background"></div>
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#menu" class="icon icon--menu"></a>
+            </a>
+          </div>
+          <a href="#" class="header__logo">na <br> mu</a>
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button">
+              <a href="#" class="button__text">КВИТКИ</a>
+              <a href="#" class="button__arrow">
+                <span class="icon icon--arrow-white"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon icon--close"></a>
+            <nav class="nav__links">
+              <a class="nav__link" href="#gallery">Галерея</a>
+              <a class="nav__link" href="#subscription">Про Нас</a>
+              <a class="nav__link" href="#events">Виставки та події</a>
+              <a class="nav__link" href="#contacts">Контакти</a>
+            </nav>
+          </div>
+          <div class="menu__schedule">
+            <h2 class="schedule__title schedule__title--header">Графік роботи</h2>
+            <ul class="schedule__list">
+              <li class="schedule__item">
+                <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">12:00 — 20:00</span> середа</p>
+              </li>
+              <li class="schedule__item">
+                <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">12:00 — 20:00</span> четвер</p>
+              </li>
+              <li class="schedule__item">
+                <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">12:00 — 20:00</span> п'ятниця</p>
+              </li>
+              <li class="schedule__item">
+                <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">11:00 — 19:00</span> субота</p>
+              </li>
+              <li class="schedule__item">
+                <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">11:00 — 19:00</span> неділя</p>
+              </li>
+            </ul>
+            <p class="schedule__text">
+              <span class="schedule__text--bold schedule__text--bold--header">Вихідні:</span>
+              понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="page__main">
+
+      <section class="events section" id="events">
+        <div class="container">
+          <h2 class="section__title">Актуальні події</h2>
+          <div class="container__grid">
+            <img
+              src="./images/1.png"
+              alt="1"
+              class="events__block__picture"
+            >
+            <article class="events__block">
+              <div class="events__block__under">
+                <p class="events__block__under--grey">ВИСТАВКА</p>
+                <p class="events__block__under--green">26.08-29.11.2019</p>
+              </div>
+              <h3 class="events__block__title">Йду і повертаюсь</h3>
+              <p class="events__block__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </article>
+            <img
+              src="./images/2.png"
+              alt="2"
+              class="events__block__picture"
+            >
+            <article class="events__block">
+              <div class="events__block__under">
+                <p class="events__block__under--grey">ВИСТАВКА</p>
+                <p class="events__block__under--green">26.08-29.11.2019</p>
+              </div>
+              <h3 class="events__block__title">І спогади і мрії</h3>
+              <p class="events__block__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </article>
+          </div>
+        </div>
+        <a
+        href="#"
+        class="events__block__picture events__block__picture--3"
+        >
+        </a>
+        <div class="container">
+          <article class="events__block--3 events__block">
+            <div class="events__block__under events__block__under--3">
+              <p class="events__block__under--grey">ЛЕКЦІЯ</p>
+              <p class="events__block__under--green">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="events__block__title events__block__title--3">Від класицизму до <br> романтизму</h3>
+          </article>
+        </div>
+      </section>
+      <section class="gallery section" id="gallery">
+        <div class="container">
+          <h2 class="section__title">Галерея</h2>
+          <div class="container__grid">
+            <img
+              src="./images/gallery.png"
+              alt="1"
+              class="gallery__picture"
+            >
+          </div>
+          <div class="slider">
+            <a href="#" class="slider__dot--active slider__dot"></a>
+            <a href="#" class="slider__dot"></a>
+            <a href="#" class="slider__dot"></a>
+            <a href="#" class="slider__dot"></a>
+          </div>
+        </div>
+      </section>
+      <section class="subscription section" id="subscription">
+        <div class="subscription__bg"></div>
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title section__title">Підписка</h2>
+            <p class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+                onsubmit="this.reset(); return false;"
+                method="post"
+                action="#"
+                class="subscription__form"
+                required
+              >
+              <input
+                type="email"
+                name="message"
+                placeholder="Your email"
+                class="subscription__input"
+                required
+                onfocus="this.removeAttribute('readonly')"
+              >
+              <div class="subscription__button">
+                <button class="button__subcription" type="submit">
+                  <span class="icon icon--arrow-black"></span>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="contacts section" id="contacts">
+        <div class="container">
+          <div class="contacts__content contacts__content--top">
+            <div class="contacts__left">
+              <a href="#" class="contacts__logo">
+                na <br> mu
+              </a>
+            </div>
+            <div class="contacts__right">
+              <a
+                href="https://www.facebook.com/"
+                class="icon icon--fb"
+                target="_blank">
+              </a>
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--inst"
+                target="_blank">
+              </a>
+            </div>
+          </div>
+          <div class="contacts__content contacts__content--middle">
+            <div class="contacts__schedule">
+              <h2 class="schedule__title">Графік роботи</h2>
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <p><span class="schedule__text--bold">12:00 — 20:00</span> середа</p>
+                </li>
+                <li class="schedule__item">
+                  <p><span class="schedule__text--bold">12:00 — 20:00</span> четвер</p>
+                </li>
+                <li class="schedule__item">
+                  <p><span class="schedule__text--bold">12:00 — 20:00</span> п'ятниця</p>
+                </li>
+                <li class="schedule__item">
+                  <p><span class="schedule__text--bold">11:00 — 19:00</span> субота</p>
+                </li>
+                <li class="schedule__item">
+                  <p><span class="schedule__text--bold">11:00 — 19:00</span> неділя</p>
+                </li>
+              </ul>
+              <p>
+                <span class="schedule__text--bold">Вихідні:</span>
+                понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+            <div class="contacts__contact-us">
+              <h3 class="contact-us__title">Контакти:</h3>
+              <p class="contact-us__text">
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+                тел. +38 (044) 278-13-57 <br>
+                факс +38 (044) 278-74-54 <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+            <a href="#" class="contacts__arrow icon icon--arrow-up"></a>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__top">
+              <nav class="nav__links nav__links--footer">
+                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
+                <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
+                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+                <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
+              </nav>
+            </div>
+            <div class="footer__bottom">
+              <p class="footer__bottom__text">Designed by Zhyriada Marina</p>
+              <p class="footer__bottom__text">Copyright © 2019. All Rights Reserved.</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </main>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
