--- a/src/index.html
+++ b/src/index.html
@@ -354,40 +354,44 @@
     </main>
 
     <footer class="footer" id="footer">
-      <div class="container">
+      <div class="container grid">
         <div class="footer__content">
-          <a href="#" class="footer__logo">
-            na <br> mu
-          </a>
-
-          <div class="footer__social">
-            <a 
-              href="https://www.facebook.com"
-              class="footer__social--link"
-              target="_blank"
-            >
-              <img 
-                src="images/facebook.svg" alt="Facebook"
-                class="footer__facebook"
+          <div class="
+          grid__item--mobile-1-2
+          grid__item--tablet-1-1
+          grid__item--desktop-1-1
+          ">
+            <div class="footer__social">
+              <a href="#" class="footer__logo">
+                na <br> mu
+              </a>
+  
+              <a 
+                href="https://www.facebook.com"
+                class="footer__social--link"
+                target="_blank"
               >
-            </a>
-
-            <a 
-              href="https://www.instagram.com"
-              class="footer__social--link"
-              target="_blank"
-            >
-              <img 
-                src="images/instagram.svg" alt="Instagram"
-                class="footer__instagram"
+                <img 
+                  src="images/facebook.svg" alt="Facebook"
+                  class="footer__facebook"
+                >
+              </a>
+  
+              <a 
+                href="https://www.instagram.com"
+                class="footer__social--link"
+                target="_blank"
               >
-            </a>
+                <img 
+                  src="images/instagram.svg" alt="Instagram"
+                  class="footer__instagram"
+                >
+              </a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="grid">
-        <div class="              grid__item--mobile-1-1
+        <div class="grid__item--mobile-1-1
         grid__item--tablet-2-3 grid__item--desktop-3-4">
           <div class="
           footer__schedule
@@ -396,28 +400,34 @@
 
             <div class="footer__info">
               <div class="footer__info--container">
-                <p class="footer__info footer__info--time">12:00 — 20:00</p>
-                <p class="footer__info footer__info--day">середа</p>
+                <p class="footer__info">
+                  <strong>12:00 — 20:00</strong> середа
+                </p>
               </div>
   
               <div class="footer__info--container">
-                <p class="footer__info footer__info--time">12:00 — 20:00</p>
-                <p class="footer__info footer__info--day">четвер</p>
+                <p class="footer__info">
+                  <strong>12:00 — 20:00 </strong>четвер
+                </p>
               </div>
   
               <div class="footer__info--container">
-                <p class="footer__info footer__info--time">12:00 — 20:00</p>
-                <p class="footer__info footer__info--day">п’ятниця</p>
+                <p
+                class="footer__info">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </p>
               </div>
   
               <div class="footer__info--container">
-                <p class="footer__info footer__info--time">11:00 — 19:00</p>
-                <p class="footer__info footer__info--day">субота</p>
+                <p class="footer__info">
+                  <strong>11:00 — 19:00</strong> субота
+                </p>
               </div>
   
               <div class="footer__info--container">
-                <p class="footer__info footer__info--time">11:00 — 19:00</p>
-                <p class="footer__info footer__info--day">неділя</p>
+                <p class="footer__info">
+                  <strong>11:00 — 19:00</strong> неділя
+                </p>
               </div>
             </div>
 
@@ -431,7 +441,7 @@
         </div>
 
         <div class="
-          grid__item--mobile-2-2 
+          grid__item--mobile-2-2
           grid__item--tablet-4-5
           grid__item--desktop-5-6"
         >
@@ -463,23 +473,25 @@
 
         <div class="
           grid__item--mobile-1-2
-          grid__item--tablet-2-5"
+          grid__item--tablet-2-5
+          grid__item--desktop-7-7
+          "
         >
           <div class="footer__line"></div>
         </div>
 
         <div class="grid__item--mobile-1-1
         grid__item--tablet-2-2 grid__item--desktop-8-9">
-          <a href="#events" class="footer__link footer__links">Виставки та події</a>
+          <a href="#events" class="footer__link footer__links">Галерея</a>
           
-          <a href="#gallery" class="footer__link footer__links">Галерея</a>
+          <a href="#gallery" class="footer__link footer__links">Виставки та події</a>
         </div>
 
         <div class="grid_-item--mobile-2-2
         grid__item--tablet-4-4 grid__item--desktop-10-10">
-          <a href="#contacts" class="footer__link footer__links">Контакти</a>
+          <a href="#contacts" class="footer__link footer__links">Про Нас</a>
 
-          <a href="#subscription" class="footer__link footer__links">Про Нас</a>
+          <a href="#subscription" class="footer__link footer__links">Контакти</a>
         </div>
       </div>
     </footer>
