--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link 
+      rel="icon" 
+      type="image/x-icon"
+      href="http://joxi.ru/1A5kM0lI4nBB3m"
+    >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
