header mobile is done

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,84 @@
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
   <body>
-    <header class="header">
-      <div class="container">
+    <header class="header" id="home">
+      <div class="header__wrap">
+        <div class="header__top">
+          <div class="header__page-title">
+            NA
+            <br>
+            MU
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <div class="container">
+            <a href="#top-menu" class="header__menu-icon">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_320_168)">
+                  <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08">
+                </g>
+                <defs>
+                  <clippath id="clip0_320_168">
+                    <rect
+                      width="24"
+                      height="24"
+                      fill="white"
+                    >
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+
+            <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
+
+            <div class="header__ticket--wrap">
+              <input
+                class="header__ticket--btn"
+                type="button"
+                id="ticket-btn"
+                value="КВИТКИ"
+              >
+              <label for="ticket-btn" class="header__ticket--label">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                >
+                  <g clip-path="url(#clip0_320_174)">
+                    <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" fill="#D7DDE3">
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_174">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                      >
+                    </clippath>
+                  </defs>
+                </svg>
+              </label>
+            </div>
+          </div>
+        </div>
 
       </div>
     </header>
 
-    <aside class="modal">
+    <aside class="modal" id="top-menu">
       <div class="modal__outer">
         <div class="container">
           <div class="modal__wrapper">
             <div class="modal__top">
-              <div class="modal__close">
+              <a href="#home" class="modal__close">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -44,7 +110,7 @@
                     </clippath>
                   </defs>
                 </svg>
-              </div>
+              </a>
               <nav class="nav">
                 <ul class="nav__list">
                   <div class="nav__wrap">
