fix img-hover add-container-img

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,7 @@
                 КВИТКИ
               </div>
 
-              <div class="buy-btn__arrow">
-                >
-              </div>
+              <div class="buy-btn__arrow"></div>
             </a>
 
             <div class="line__events"></div>
@@ -187,26 +185,34 @@
           </h2>
 
           <div class="gallery__img-block">
-            <img
-              src="../src/images/gallery1.png"
-              alt="gallery1"
-              class="gallery__img grid__item--desktop--1-4"
-            >
-            <img
-              src="../src/images/gallery2.png"
-              alt="gallery2"
-              class="gallery__img grid__item--desktop--5-12"
-            >
-            <img
-              src="../src/images/gallery3.png"
-              alt="gallery3"
-              class="gallery__img grid__item--desktop--1-8"
-            >
-            <img
-              src="../src/images/gallery4.png"
-              alt="gallery4"
-              class="gallery__img grid__item--desktop--9-12"
-            >            
+            <div class="gallery__img-container grid__item--desktop--1-4">
+              <img
+                src="../src/images/gallery1.png"
+                alt="gallery1"
+                class="gallery__img"
+              >
+            </div>
+            <div class="gallery__img-container grid__item--desktop--5-12">
+              <img
+                src="../src/images/gallery2.png"
+                alt="gallery2"
+                class="gallery__img"
+              >
+            </div>
+            <div class="gallery__img-container grid__item--desktop--1-8">
+              <img
+                src="../src/images/gallery3.png"
+                alt="gallery3"
+                class="gallery__img"
+              >
+            </div>
+            <div class="gallery__img-container grid__item--desktop--9-12">
+              <img
+                src="../src/images/gallery4.png"
+                alt="gallery4"
+                class="gallery__img"
+              > 
+            </div>    
           </div>
 
           <div class="pagination__block"></div>
@@ -230,7 +236,7 @@
                 placeholder="E-mail"
               >
 
-              <button class="buy-btn__arrow buy-btn__arrow--footer">></button>
+              <button class="buy-btn__arrow buy-btn__arrow--footer"></button>
             </form>
           </div>
         </div>
