--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Title</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
     <header class="header page__section" id="header">
       <div class="grid grid--ipad">
         <div class="header__first--section grid__item--ipad--4-6 grid__item--desktop--6-12 grid--ipad grid__header">
-          <a href="#" class="header__logo grid__item--ipad--1-2">
+          <a href="#" class="logo grid__item--ipad--1-2">
             NA
             <br>
             MU
@@ -247,7 +249,7 @@
       <div class="container">
         <div class="contact-us contact-us__content grid grid--footer" id="contacts">
           <div class="contact-us__logo-block grid__item--ipad--1-1 grid__item--desktop--1-1">
-            <a href="#" class="header__logo footer__logo">
+            <a href="#" class="logo logo__footer">
               NA
               <br>
               MU
