header for all devices was done

--- a/src/index.html
+++ b/src/index.html
@@ -14,39 +14,38 @@
   </head>
   <body>
     <header class="header" id="home">
-      <div class="header__wrap">
-        <div class="header__top">
-          <div class="header__page-title">
-            NA
-            <br>
-            MU
+      <div class="header__img"></div>
+      <div class="container">
+        <a href="#top-menu" class="header__menu-icon">
+          <svg
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+          >
+            <g clip-path="url(#clip0_320_168)">
+              <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08">
+            </g>
+            <defs>
+              <clippath id="clip0_320_168">
+                <rect
+                  width="24"
+                  height="24"
+                  fill="white"
+                >
+              </clippath>
+            </defs>
+          </svg>
+        </a>
+        <div class="header__wrap">
+          <div class="header__top">
+            <div class="header__page-title">
+              NA
+              <br>
+              MU
+            </div>
           </div>
-        </div>
-
-        <div class="header__bottom">
-          <div class="container">
-            <a href="#top-menu" class="header__menu-icon">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-              >
-                <g clip-path="url(#clip0_320_168)">
-                  <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08">
-                </g>
-                <defs>
-                  <clippath id="clip0_320_168">
-                    <rect
-                      width="24"
-                      height="24"
-                      fill="white"
-                    >
-                  </clippath>
-                </defs>
-              </svg>
-            </a>
-
+          <div class="header__bottom">
             <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
 
             <div class="header__ticket--wrap">
@@ -79,9 +78,10 @@
                 </svg>
               </label>
             </div>
+
+            <div class="header__events">ПОДІЇ</div>
           </div>
         </div>
-
       </div>
     </header>
 
