--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
         <div class="header__content">
           <div class="header__top">
             <a href="#menu" class="icon icon--menu"></a>
-            </a>
           </div>
           <a href="#" class="header__logo">na <br> mu</a>
           <div class="header__bottom">
-            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-            <div class="header__button">
-              <a href="#" class="button__text">КВИТКИ</a>
-              <a href="#" class="button__arrow">
-                <span class="icon icon--arrow-white"></span>
-              </a>
-            </div>
+            <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
           </div>
+          <div class="header__button">
+            <a href="#" class="button__text">КВИТКИ</a>
+            <a href="#" class="button__arrow">
+              <span class="icon icon--arrow-white"></span>
+            </a>
+          </div>
+          <span class="header__side-text">події</span>
         </div>
       </div>
 
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__top">
-            <a href="#" class="icon icon--close"></a>
+            <a href="#" class="icon icon--close menu__close"></a>
             <nav class="nav__links">
               <a class="nav__link" href="#gallery">Галерея</a>
               <a class="nav__link" href="#subscription">Про Нас</a>
@@ -79,7 +79,7 @@
 
       <section class="events section" id="events">
         <div class="container">
-          <h2 class="section__title">Актуальні події</h2>
+          <h2 class="section__title section__title--events">Актуальні події</h2>
           <div class="container__grid">
             <img
               src="./images/1.png"
@@ -91,7 +91,10 @@
                 <p class="events__block__under--grey">ВИСТАВКА</p>
                 <p class="events__block__under--green">26.08-29.11.2019</p>
               </div>
-              <h3 class="events__block__title">Йду і повертаюсь</h3>
+              <div class="events__block__top">
+                <h3 class="events__block__title">Йду і повертаюсь</h3>
+                <span class="icon icon--cube"></span>
+              </div>
               <p class="events__block__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
             </article>
             <img
@@ -104,7 +107,10 @@
                 <p class="events__block__under--grey">ВИСТАВКА</p>
                 <p class="events__block__under--green">26.08-29.11.2019</p>
               </div>
-              <h3 class="events__block__title">І спогади і мрії</h3>
+              <div class="events__block__top">
+                <h3 class="events__block__title">І спогади і мрії</h3>
+                <span class="icon icon--cube"></span>
+              </div>
               <p class="events__block__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
             </article>
           </div>
@@ -114,7 +120,7 @@
         class="events__block__picture events__block__picture--3"
         >
         </a>
-        <div class="container">
+        <div class="container__events">
           <article class="events__block--3 events__block">
             <div class="events__block__under events__block__under--3">
               <p class="events__block__under--grey">ЛЕКЦІЯ</p>
@@ -131,7 +137,27 @@
             <img
               src="./images/gallery.png"
               alt="1"
-              class="gallery__picture"
+              class="gallery__picture gallery__picture--1"
+            >
+            <img
+              src="./images/gallery2.png"
+              alt="2"
+              class="gallery__picture gallery__picture--2"
+            >
+            <img
+              src="./images/gallery3.png"
+              alt="3"
+              class="gallery__picture gallery__picture--3"
+            >
+            <img
+              src="./images/gallery4.png"
+              alt="4"
+              class="gallery__picture gallery__picture--4"
+            >
+            <img
+              src="./images/gallery5.png"
+              alt="5"
+              class="gallery__picture gallery__picture--5"
             >
           </div>
           <div class="slider">
@@ -153,12 +179,11 @@
                 method="post"
                 action="#"
                 class="subscription__form"
-                required
               >
               <input
                 type="email"
                 name="message"
-                placeholder="Your email"
+                placeholder="E-mail"
                 class="subscription__input"
                 required
                 onfocus="this.removeAttribute('readonly')"
@@ -174,62 +199,85 @@
       </section>
       <section class="contacts section" id="contacts">
         <div class="container">
-          <div class="contacts__content contacts__content--top">
-            <div class="contacts__left">
-              <a href="#" class="contacts__logo">
-                na <br> mu
-              </a>
+          <div class="contacts__content">
+            <div class="contacts__content__top">
+              <div class="contacts__left">
+                <a href="#" class="contacts__logo">
+                  na <br> mu
+                </a>
+              </div>
+              <div class="contacts__right">
+                <a
+                  href="https://www.facebook.com/"
+                  class="icon icon--fb"
+                  target="_blank">
+                </a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="icon icon--inst"
+                  target="_blank">
+                </a>
+              </div>
             </div>
-            <div class="contacts__right">
-              <a
-                href="https://www.facebook.com/"
-                class="icon icon--fb"
-                target="_blank">
-              </a>
-              <a
-                href="https://www.instagram.com/"
-                class="icon icon--inst"
-                target="_blank">
-              </a>
-            </div>
-          </div>
-          <div class="contacts__content contacts__content--middle">
-            <div class="contacts__schedule">
-              <h2 class="schedule__title">Графік роботи</h2>
-              <ul class="schedule__list">
-                <li class="schedule__item">
-                  <p><span class="schedule__text--bold">12:00 — 20:00</span> середа</p>
-                </li>
-                <li class="schedule__item">
-                  <p><span class="schedule__text--bold">12:00 — 20:00</span> четвер</p>
-                </li>
-                <li class="schedule__item">
-                  <p><span class="schedule__text--bold">12:00 — 20:00</span> п'ятниця</p>
-                </li>
-                <li class="schedule__item">
-                  <p><span class="schedule__text--bold">11:00 — 19:00</span> субота</p>
-                </li>
-                <li class="schedule__item">
-                  <p><span class="schedule__text--bold">11:00 — 19:00</span> неділя</p>
-                </li>
-              </ul>
-              <p>
-                <span class="schedule__text--bold">Вихідні:</span>
-                понеділок, вівторок <br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
-            </div>
-            <div class="contacts__contact-us">
-              <h3 class="contact-us__title">Контакти:</h3>
-              <p class="contact-us__text">
-                вул. М. Грушевського, 6; Київ, 01001 <br>
-                тел. +38 (044) 278-13-57 <br>
-                факс +38 (044) 278-74-54 <br>
-                e-mail: info@namu.kiev.ua
-              </p>
+            <div class="contacts__content__middle">
+              <div class="contacts__schedule">
+                <h2 class="schedule__title">Графік роботи</h2>
+                <ul class="schedule__list">
+                  <li class="schedule__item">
+                    <p><span class="schedule__text--bold">12:00 — 20:00</span> середа</p>
+                  </li>
+                  <li class="schedule__item">
+                    <p><span class="schedule__text--bold">12:00 — 20:00</span> четвер</p>
+                  </li>
+                  <li class="schedule__item">
+                    <p><span class="schedule__text--bold">12:00 — 20:00</span> п'ятниця</p>
+                  </li>
+                  <li class="schedule__item">
+                    <p><span class="schedule__text--bold">11:00 — 19:00</span> субота</p>
+                  </li>
+                  <li class="schedule__item">
+                    <p><span class="schedule__text--bold">11:00 — 19:00</span> неділя</p>
+                  </li>
+                </ul>
+                <p>
+                  <span class="schedule__text--bold">Вихідні:</span>
+                  понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+              <div class="contacts__contact-us">
+                <h3 class="contact-us__title">Контакти:</h3>
+                <p class="contact-us__text">
+                  <a
+                    class="contact-us__text"
+                    href="https://goo.gl/maps/uNJNippfd6fiUGHR6"
+                    target="_blank"
+                    >вул. М. Грушевського, 6; Київ, 01001</a><br>
+                  <a
+                    class="contact-us__text"
+                    href="tel:+380442781357"
+                    >тел. +38 (044) 278-13-57</a> <br>
+                  <a
+                    class="contact-us__text"
+                    href="tel:+380442787454"
+                    >факс +38 (044) 278-74-54</a><br>
+                  <a
+                    class="contact-us__text"
+                    href="mailto:info@namu.kiev.ua"
+                    >e-mail: info@namu.kiev.ua</a>
+                </p>
+              </div>
             </div>
             <a href="#" class="contacts__arrow icon icon--arrow-up"></a>
+            <div class="contacts__bottom">
+              <nav class="nav__links nav__links--footer">
+                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
+                <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
+                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+                <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
+              </nav>
+            </div>
           </div>
         </div>
       </section>
@@ -238,12 +286,6 @@
         <div class="container">
           <div class="footer__content">
             <div class="footer__top">
-              <nav class="nav__links nav__links--footer">
-                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
-                <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
-                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
-                <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
-              </nav>
             </div>
             <div class="footer__bottom">
               <p class="footer__bottom__text">Designed by Zhyriada Marina</p>
