--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link 
       rel="icon" 
       type="image/x-icon"
-      href="http://joxi.ru/1A5kM0lI4nBB3m"
+      href="./images/NA MU.svg"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
