fix img add link in footer

--- a/src/index.html
+++ b/src/index.html
@@ -256,7 +256,7 @@
             </a>
 
             <div class="contact-us__follow">
-              <a href="#">
+              <a href="https://facebook.com/" target="_blank">
                 <img
                   src="../src/images/Facebook.png"
                   alt="Facebook"
@@ -264,7 +264,7 @@
                 >
               </a>
               
-              <a href="#">
+              <a href="https://www.instagram.com/" target="_blank">
                 <img
                   src="../src/images/instagram.png"
                   alt="instagram"
@@ -296,10 +296,10 @@
             <div>Контакти:</div>
 
             <div>
-              <div>вул. М. Грушевського, 6; Київ, 01001</div>
-              <div>тел. +38 (044) 278-13-57</div>
-              <div>факс +38 (044) 278-74-54</div>
-              <div>e-mail: info@namu.kiev.ua</div>
+              <a href="https://goo.gl/maps/joDhKWaeiPPcSQhb6" class="footer__link" target="_blank">вул. М. Грушевського, 6; Київ, 01001</a>
+              <a href="tel:+3800442781367" class="footer__link">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+3800442787454" class="footer__link">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
           <div class="line line--footer grid__item--ipad--1-6 grid__item--desktop--7-7"></div>
