add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.svg"
+    >
   </head>
   <body class="page">
     <header class="header">
@@ -39,10 +44,10 @@
           <div class="menu__top">
             <a href="#" class="icon icon--close menu__close"></a>
             <nav class="nav__links">
-              <a class="nav__link" href="#gallery">Галерея</a>
-              <a class="nav__link" href="#subscription">Про Нас</a>
-              <a class="nav__link" href="#events">Виставки та події</a>
-              <a class="nav__link" href="#contacts">Контакти</a>
+              <a class="nav__link nav__link--header nav__link--header--1" href="#gallery">Галерея</a>
+              <a class="nav__link nav__link--header nav__link--header--2" href="#subscription">Про Нас</a>
+              <a class="nav__link nav__link--header nav__link--header--3" href="#events">Виставки та <br> події</a>
+              <a class="nav__link nav__link--header nav__link--header--4" href="#contacts">Контакти</a>
             </nav>
           </div>
           <div class="menu__schedule">
@@ -64,7 +69,7 @@
                 <p class="schedule__text"><span class="schedule__text--bold schedule__text--bold--header">11:00 — 19:00</span> неділя</p>
               </li>
             </ul>
-            <p class="schedule__text">
+            <p class="schedule__text schedule__item--last">
               <span class="schedule__text--bold schedule__text--bold--header">Вихідні:</span>
               понеділок, вівторок <br>
               Каса припиняє роботу за 1 годину
@@ -274,7 +279,7 @@
               <nav class="nav__links nav__links--footer">
                 <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
                 <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
-                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+                <a class="nav__link nav__link--footer" href="#events">Виставки та <br> події</a>
                 <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
               </nav>
             </div>
