add hoovering effects

--- a/src/index.html
+++ b/src/index.html
@@ -255,20 +255,20 @@
                 <h3 class="contact-us__title">Контакти:</h3>
                 <p class="contact-us__text">
                   <a
-                    class="contact-us__text"
+                    class="contact-us__item contact-us__item--1"
                     href="https://goo.gl/maps/uNJNippfd6fiUGHR6"
                     target="_blank"
                     >вул. М. Грушевського, 6; Київ, 01001</a><br>
                   <a
-                    class="contact-us__text"
+                    class="contact-us__item"
                     href="tel:+380442781357"
                     >тел. +38 (044) 278-13-57</a> <br>
                   <a
-                    class="contact-us__text"
+                    class="contact-us__item"
                     href="tel:+380442787454"
                     >факс +38 (044) 278-74-54</a><br>
                   <a
-                    class="contact-us__text"
+                    class="contact-us__item"
                     href="mailto:info@namu.kiev.ua"
                     >e-mail: info@namu.kiev.ua</a>
                 </p>
@@ -277,10 +277,10 @@
             <a href="#" class="contacts__arrow icon icon--arrow-up"></a>
             <div class="contacts__bottom">
               <nav class="nav__links nav__links--footer">
-                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
-                <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
-                <a class="nav__link nav__link--footer" href="#events">Виставки та <br> події</a>
-                <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
+                <a class="nav__link nav__link--footer nav__link--footer--1" href="#gallery">Галерея</a>
+                <a class="nav__link nav__link--footer nav__link--footer--2" href="#subscription">Про Нас</a>
+                <a class="nav__link nav__link--footer nav__link--footer--3" href="#events">Виставки та <br> події</a>
+                <a class="nav__link nav__link--footer nav__link--footer--4" href="#contacts">Контакти</a>
               </nav>
             </div>
           </div>
