added hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="icons">
         <div class="icons__menu"><a class="icons__menu-link" href="#menu"></a></div>
-        <div class="icons__logo"><a class="icons__logo-logo" href="#">NA<br>MU</a></div>
+        <div class="icons__logo"><a class="icons__logo-logo logo" href="#">NA<br>MU</a></div>
       </div>
       <div class="header__content">
         <div class="header__content-left">
@@ -28,7 +28,13 @@
               <a class="intro__links--events" href="#events">події</a>
               <div class="intro__links--tickets">
                 <div class="intro__links--tickets-text">квитки</div>
-                <a class="intro__links--tickets-link" href="#subs"><img src="./images/icons/arrow.svg" alt="arrow"></a>
+                <a class="intro__links--tickets-link" href="#subs">
+                  <img 
+                    src="./images/icons/arrow.svg" 
+                    alt="arrow"
+                    class="button__img"  
+                  >
+                </a>
               </div>
             </div>
           </div>
@@ -231,7 +237,13 @@
             placeholder="E-mail"
             required
           >
-          <button type="submit" class="subs__form-btn"><img src="./images/icons/arrow-black.svg" alt="arrow"></button>
+          <button type="submit" class="subs__form-btn">
+            <img 
+              src="./images/icons/arrow-black.svg" 
+              alt="arrow"
+              class="button__img"  
+            >
+          </button>
         </form>
       </section>
     </main>
@@ -239,7 +251,7 @@
     <footer class="footer" id="footer">
       <div class="footer__content">
         <div class="footer__icons">
-          <div class="footer__icons--logo"><a class="footer__icons--logo-logo" href="#">NA<br>MU</a></div>
+          <div class="footer__icons--logo"><a class="footer__icons--logo-logo logo" href="#">NA<br>MU</a></div>
   
           <div class="icons__social">
             <a 
