--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,9 @@
           <form
             action="email"
             method="get"
-            class="subscription__form">
+            class="subscription__form"
+            onsubmit="this.reset(); return false;"
+          >
             <input
               type="email"
               placeholder="E-mail"
@@ -317,6 +319,7 @@
             <a
               href="https://www.facebook.com/namu.museum/"
               class="about-us__facebook link"
+              target="_blank"
             >
               <img
                 src="./images/logo/facebook.svg"
@@ -327,6 +330,7 @@
             <a
               href="https://www.instagram.com/namu.museum/?hl=en"
               class="about-us__instagram link"
+              target="_blank"
             >
               <img
                 src="./images/logo/instagram.svg" alt="instagram"
@@ -376,6 +380,7 @@
               <a
                 href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+Ukraine,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwjk-KaBt5-AAxVmiP0HHbFsCf0Q8gF6BAgTEAA&ved=2ahUKEwjk-KaBt5-AAxVmiP0HHbFsCf0Q8gF6BAgXEAI"
                 class="link about-us__contacts__link"
+                target="_blank"
               >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
@@ -385,6 +390,7 @@
               <a
                 href="tel:+380442781357"
                 class="link about-us__contacts__link"
+                target="_blank"
               >
                 тел. +38 (044) 278-13-57
               </a>
@@ -394,6 +400,7 @@
               <a
                 href="fax:+380442787454"
                 class="link about-us__contacts__link"
+                target="_blank"
               >
                 факс +38 (044) 278-74-54
               </a>
@@ -403,6 +410,7 @@
               <a
                 href="mailto:info@namu.kiev.ua"
                 class="link about-us__contacts__link"
+                target="_blank"
               >
               e-mail: info@namu.kiev.ua
               </a>
