add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -342,7 +342,7 @@
                   <a
                     class="footer__phone-link"
                     href="tel:+38 (044) 278-13-57"
-                  >+38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+                  >тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
                 </div>
 
                 <div class="footer__email">
