mobile almost done

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,323 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      href="images/favicon.svg"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header" id="header">
+      <div class="header__top">
+        <a href="./" class="logo">
+          <img
+            class="logo__image"
+            src="./images/icons/namu-logo.svg"
+            alt="namu logo"
+          >
+        </a>
+      </div>
+
+      <a
+        href="#menu"
+        class="header__menu page__icon"
+      ></a>
+
+      <div class="header__bottom">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="/" class="tickets header__tickets">
+          <div class="tickets__text">
+            Квитки
+          </div>
+          <div class="tickets__arrow">
+            <img
+            src="./images/icons/arrow.svg"
+            alt="arrow"
+            class="tickets__image"
+          >
+          </div>
+        </a>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <a
+        href="#"
+        class="menu__close page__icon"
+      ></a>
+
+      <nav class="menu__nav">
+        <ul class="menu__list">
+          <div class="menu__wrap">
+            <li class="menu__item">
+              <a class="menu__link" href="#gallery">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#events">
+                Виставки та події
+              </a>
+            </li>
+          </div>
+          <div class="menu_wrap">
+            <li class="menu__item">
+              <a class="menu__link" href="#subscription">
+                Підписка
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#contacts">
+                Контакти
+              </a>
+            </li>
+          </div>
+
+        </ul>
+      </nav>
+
+      <div class="menu__grafic grafic">
+        <p class="grafic__text">
+          Графік роботи
+        </p>
+
+        <div class="grafic__week">
+          <p class="grafic__time">12:00 — 20:00</p> середа
+          </br>
+          <p class="grafic__time">12:00 — 20:00</p> четвер
+          </br>
+          <p class="grafic__time">12:00 — 20:00</p> п’ятниця
+          </br>
+          <p class="grafic__time">11:00 — 19:00</p> субота
+          </br>
+          <p class="grafic__time">11:00 — 19:00</p> неділя
+        </div>
+
+        <div class="grafic__kasa">
+          <p class="grafic__weekend">Вихідні:</p> понеділок, вівторок
+          <br>Каса припиняє роботу за 1 годину
+          до закриття музею
+        </div>
+      </div>
+    </aside>
+
+    <a href="#" class="page__wrapper"></a>
+
+    <main class="main page__main">
+      <section id="events" class="events main__section">
+        <h2 class="events__title page__title">Актуальні події</h2>
+        <article class="article events__article article--padding">
+          <img
+            src="./images/images/event_1.jpg"
+            alt="image"
+            class="article__image"
+          >
+
+          <div class="article__date">
+            <p>ВИСТАВКА</p>
+            <p class="article__dating">26.08-29.11.2019</p>
+          </div>
+          <h3 class="article__title">Йду і повертаюсь</h3>
+          <p class="article__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&nbsp;-1995 років.</p>
+        </article>
+
+        <article class="article events__article article--padding">
+          <img
+            src="./images/images/event_2.jpg"
+            alt="image"
+            class="article__image"
+          >
+
+          <div class="article__date">
+            <p>ВИСТАВКА</p>
+            <p class="article__dating">26.08-29.11.2019</p>
+          </div>
+          <h3 class="article__title">І спогади і мрії</h3>
+          <p class="article__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </article>
+
+        <article class="article events__article">
+          <img
+            src="./images/images/event_3.jpg"
+            alt="image"
+            class="article__image"
+          >
+
+          <div class="article__wrapper">
+            <div class="article__date article__date--up">
+              <p>ЛЕКЦІЯ</p>
+              <p class="article__dating">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="article__title article__title--rectangle--no">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+
+      <section id="gallery" class="gallery main__section">
+        <h2 class="gallery__title page__title">Галерея</h2>
+        <div class="gallery__grid">
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery/gallery_1.jpg"
+              alt="folk costume"
+              class="gallery__image"
+            >
+          </div>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery/gallery_2.jpg"
+              alt="Ukrainian house"
+              class="gallery__image"
+            >
+          </div>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery/gallery_3.jpg"
+              alt="
+              garden"
+              class="gallery__image"
+            >
+          </div>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery/gallery_4.jpg"
+              alt="sea"
+              class="gallery__image"
+            >
+          </div>
+
+        </div>
+        <div class="gallery__slider"></div>
+      </section>
+
+      <section id="subscription" class="subscription main__section">
+        <h2 class="subscription__title page__title">Підписка</h2>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form action="" class="form subscription__email">
+          <div class="form__text">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="subscription__input"
+            >
+          </div>
+          <div class="form__arrow">
+            <img
+            src="./images/icons/arrow-black.svg"
+            alt="arrow"
+            class="form__image"
+          >
+          </div>
+        </form>
+      </section>
+
+      <section id="contacts" class="contacts main__section">
+        <div class="contacts__top">
+          <img src="./images/icons/logo-contact.svg" alt="logo" class="contacts__logo">
+
+          <div class="contacts__social">
+            <img src="./images/icons/facebook.svg" alt="facebook">
+            <img src="./images/icons/instagram.svg" alt="instagram">
+          </div>
+        </div>
+
+        <div class="contacts__wrapper">
+          <div class="contacts__grafic grafic">
+            <p class="grafic__text">
+              Графік роботи
+            </p>
+
+            <div class="grafic__week">
+              <p class="grafic__time">12:00 — 20:00</p> середа
+              </br>
+              <p class="grafic__time">12:00 — 20:00</p> четвер
+              </br>
+              <p class="grafic__time">12:00 — 20:00</p> п’ятниця
+              </br>
+              <p class="grafic__time">11:00 — 19:00</p> субота
+              </br>
+              <p class="grafic__time">11:00 — 19:00</p> неділя
+            </div>
+
+            <div>
+              <p>Вихідні: понеділок, вівторок
+              <br>Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+
+          <div class="contacts__contact">
+            <p class="contacts__text">
+              Контакти:
+            </p>
+
+            <p class="contacts__adress">вул. М. Грушевського, 6; Київ, 01001
+              </br>тел. +38 (044) 278-13-57
+              </br>факс +38 (044) 278-74-54
+              </br>e-mail: info@namu.kiev.ua</p>
+          </div>
+
+          <a href="#header" class="contacts__arrow">
+
+          </a>
+        </div>
+
+        <div class="contacts__menu">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link" href="#gallery">
+                Галерея
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#subscription">
+                Підписка
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#events">
+                Виставки та події
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#contacts">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p class="footer__designed">Designed by Zhyriada Marina</p>
+      <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
