add corection width

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
             </div>
 
             <div>
-              <h2 class="h222">Від класицизму до
+              <h2>Від класицизму до
                 <br>
                 романтизму
               </h2>
@@ -343,6 +343,7 @@
         </div>
 
         <div class="footer__blocks">
+          <a class="button-arrow" href="#head"></a>
           <div class="menu__footer-content">
             <div class="menu__top-content--part">
               <div class="list__footer">
@@ -431,7 +432,7 @@
           Designed by Zhyriada Marina
         </div>
       </div>
-      <a class="button-arrow" href="#head"></a>
+      <!-- <a class="button-arrow" href="#head"></a> -->
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
