--- a/src/index.html
+++ b/src/index.html
@@ -275,6 +275,7 @@
               </div>
             </div>
             <a href="#" class="contacts__arrow icon icon--arrow-up"></a>
+            <div class="contacts__border"></div>
             <div class="contacts__bottom">
               <nav class="nav__links nav__links--footer">
                 <a class="nav__link nav__link--footer nav__link--footer--1" href="#gallery">Галерея</a>
