--- a/src/index.html
+++ b/src/index.html
@@ -58,14 +58,14 @@
           href="#current-events" 
           class="header__button__buy link"
         >
-          <div class="header__button__text">
-            <span>КВИТКИ</span>
+          <div class="header__button__block">
+            <span class="header__button__text">КВИТКИ</span>
           </div>
           <div class="header__button__icon">
             <img
               src="./images/logo/arrow-grey.svg"
               alt="Arrow"
-              class="icon"
+              class="icon header__button__icon__img"
             >
           </div>
         </a>
@@ -298,7 +298,7 @@
               <img
                 src="./images/logo/arrow-black.svg"
                 alt="button"
-                class="icon"
+                class="subscription__form__button__icon icon"
               >
             </button>
           </form>
